--- a/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
+++ b/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
@@ -176,7 +176,7 @@
 <p>In the 3D view, you can select individual <b>vertices</b>, <b>edges</b> or <b>faces</b>. Selecting one of these also selects the whole object it belongs to.
 </p><p><b>A note about shared design</b>
 </p><p>You might look at the table above and think its design is not very good. The legs don't seem attached to the tabletop very securely! You might want to add reinforcing pieces, or you might have other improvements in mind. This is where sharing becomes interesting. You can download the file made during this exercise from the link below, and modify it to make it better. Then, if you share that improved file, others might be able to make it even better or use your well designed table in their projects. Your design might then give other ideas to other people, and maybe you will have contributed to a better world...
-</p><p><b>Downloads</b>
+</p><p><b>Sta&#382;en&iacute;</b>
 </p>
 <ul><li>The file produced in this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd</a></li></ul>
 <p><b>Dal&scaron;&iacute; informace:</b>
@@ -195,12 +195,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112085643
+Cached time: 20260112090612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.088 seconds
-Real time usage: 0.131 seconds
+CPU time usage: 0.097 seconds
+Real time usage: 0.172 seconds
 Preprocessor visited node count: 80/1000000
 Post&#8208;expand include size: 9139/2097152 bytes
 Template argument size: 844/2097152 bytes
@@ -211,14 +211,14 @@ Unstrip post&#8208;expand size: 2814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.095      1 -total
- 59.90%    7.245      1 Template:Manual:TOC
- 45.96%    5.559      1 Manual:Summary/cs
- 23.43%    2.834      2 Template:Docnav
- 12.89%    1.559      1 Template:Caption
+100.00%   10.612      1 -total
+ 62.98%    6.684      1 Template:Manual:TOC
+ 51.75%    5.492      1 Manual:Summary/cs
+ 20.13%    2.136      2 Template:Docnav
+ 13.50%    1.432      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112085643 and revision id 1737328. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112090612 and revision id 1737330. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
