--- a/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
+++ b/wiki/cs/Manual;Traditional_modeling,_the_CSG_way.html
@@ -5,7 +5,7 @@
 <li><a href="../it/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: Modellazione tradizionale, il metodo CSG (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Modelowanie tradycyjne, wed&#322;ug CSG (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Modelare tradi&#539;ional&#259;, varianta CSG (Constructive Solid Geometry) (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1058;&#1088;&#1072;&#1076;&#1080;&#1094;&#1080;&#1086;&#1085;&#1085;&#1086;&#1077; &#1084;&#1086;&#1076;&#1077;&#1083;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1086;&#1084; CSG (&#1050;&#1041;&#1043;) (98% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#20256;&#32479;&#24314;&#27169;&#65292;CSG&#26041;&#24335; (19% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Traditional_modeling,_the_CSG_way.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;CSG&#27969;&#12398;&#20253;&#32113;&#30340;&#12514;&#12487;&#12522;&#12531;&#12464;&#26041;&#27861; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -178,7 +178,7 @@
 </p><p>You might look at the table above and think its design is not very good. The legs don't seem attached to the tabletop very securely! You might want to add reinforcing pieces, or you might have other improvements in mind. This is where sharing becomes interesting. You can download the file made during this exercise from the link below, and modify it to make it better. Then, if you share that improved file, others might be able to make it even better or use your well designed table in their projects. Your design might then give other ideas to other people, and maybe you will have contributed to a better world...
 </p><p><b>Sta&#382;en&iacute;</b>
 </p>
-<ul><li>The file produced in this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd</a></li></ul>
+<ul><li>Soubor vytvo&#345;en&yacute; v tomto cvi&#269;en&iacute;: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/table.FCStd</a></li></ul>
 <p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Part_Workbench.html" title="Part Workbench">The Part Workbench</a></li>
@@ -195,12 +195,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112090612
+Cached time: 20260112090715
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.097 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.288 seconds
 Preprocessor visited node count: 80/1000000
 Post&#8208;expand include size: 9139/2097152 bytes
 Template argument size: 844/2097152 bytes
@@ -211,14 +211,14 @@ Unstrip post&#8208;expand size: 2814/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.612      1 -total
- 62.98%    6.684      1 Template:Manual:TOC
- 51.75%    5.492      1 Manual:Summary/cs
- 20.13%    2.136      2 Template:Docnav
- 13.50%    1.432      1 Template:Caption
+100.00%   22.422      1 -total
+ 55.64%   12.476      1 Template:Manual:TOC
+ 37.77%    8.470      1 Manual:Summary/cs
+ 28.26%    6.337      2 Template:Docnav
+ 12.33%    2.764      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112090612 and revision id 1737330. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410772-0!canonical and timestamp 20260112090714 and revision id 1737332. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
