--- a/wiki/cs/Manual;Traditional_2D_drafting.html
+++ b/wiki/cs/Manual;Traditional_2D_drafting.html
@@ -12,8 +12,8 @@
 <li><a href="../ja/Manual;Traditional_2D_drafting.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#20253;&#32113;&#30340;2D&#35069;&#22259; (2% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Traditional_2D_drafting.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#51204;&#53685;&#51201;&#51064; 2D &#51228;&#46020; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Traditional modeling, the CSG way</a></div>
-    <div><a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modeling for product design</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Tradi&#269;n&iacute; modelov&aacute;n&iacute; metodou CSG</a></div>
+    <div><a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modelov&aacute;n&iacute; pro design produkt&#367;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
@@ -179,15 +179,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112091434
+Cached time: 20260112092357
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.131 seconds
-Real time usage: 0.190 seconds
+CPU time usage: 0.150 seconds
+Real time usage: 0.223 seconds
 Preprocessor visited node count: 157/1000000
-Post&#8208;expand include size: 8466/2097152 bytes
-Template argument size: 828/2097152 bytes
+Post&#8208;expand include size: 8490/2097152 bytes
+Template argument size: 844/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -195,13 +195,13 @@ Unstrip post&#8208;expand size: 2744/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.797      1 -total
- 68.53%    8.084      1 Template:Manual:TOC
- 46.82%    5.524      1 Manual:Summary/cs
- 27.84%    3.284      2 Template:Docnav
+100.00%   13.548      1 -total
+ 66.90%    9.064      1 Template:Manual:TOC
+ 49.61%    6.721      1 Manual:Summary/cs
+ 27.98%    3.791      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112091434 and revision id 1737334. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092356 and revision id 1737337. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
