--- a/wiki/cs/Manual;Traditional_2D_drafting.html
+++ b/wiki/cs/Manual;Traditional_2D_drafting.html
@@ -171,23 +171,23 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Traditional modeling, the CSG way</a></div>
-    <div><a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modeling for product design</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Tradi&#269;n&iacute; modelov&aacute;n&iacute; metodou CSG</a></div>
+    <div><a href="../Manual;Modeling_for_product_design.html" title="Manual:Modeling for product design">Modelov&aacute;n&iacute; pro design produkt&#367;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112092357
+Cached time: 20260112092419
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.150 seconds
-Real time usage: 0.223 seconds
+CPU time usage: 0.145 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 157/1000000
-Post&#8208;expand include size: 8490/2097152 bytes
-Template argument size: 844/2097152 bytes
+Post&#8208;expand include size: 8514/2097152 bytes
+Template argument size: 860/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -195,13 +195,13 @@ Unstrip post&#8208;expand size: 2744/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.548      1 -total
- 66.90%    9.064      1 Template:Manual:TOC
- 49.61%    6.721      1 Manual:Summary/cs
- 27.98%    3.791      2 Template:Docnav
+100.00%    8.993      1 -total
+ 69.46%    6.246      1 Template:Manual:TOC
+ 52.62%    4.732      1 Manual:Summary/cs
+ 26.02%    2.340      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092356 and revision id 1737337. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092419 and revision id 1737339. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
