--- a/wiki/cs/Manual;Traditional_2D_drafting.html
+++ b/wiki/cs/Manual;Traditional_2D_drafting.html
@@ -164,7 +164,9 @@
 <li>The sink DXF file: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/sink.dxf">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/sink.dxf</a></li>
 <li>The cooktop DXF file: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/cooktop.dxf">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/cooktop.dxf</a></li>
 <li>The final DXF file produced during this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/cabin.dxf">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/cabin.dxf</a></li></ul>
-<h2><span class="mw-headline" id="Related">Related</span></h2>
+<p><span id="Related"></span>
+</p>
+<h2><span id="Dal.C5.A1.C3.AD_informace:"></span><span class="mw-headline" id="Dal&scaron;&iacute;_informace:">Dal&scaron;&iacute; informace:</span></h2>
 <ul><li><a href="../Draft_Workbench.html" title="Draft Workbench">The Draft Workbench</a></li>
 <li><a href="../Draft_Snap.html" title="Draft Snap">Snapping</a></li>
 <li><a href="../Draft_SelectPlane.html" title="Draft SelectPlane">The Draft working plane</a></li></ul>
@@ -179,13 +181,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112092419
+Cached time: 20260112092454
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.145 seconds
-Real time usage: 0.186 seconds
-Preprocessor visited node count: 157/1000000
+CPU time usage: 0.146 seconds
+Real time usage: 0.248 seconds
+Preprocessor visited node count: 158/1000000
 Post&#8208;expand include size: 8514/2097152 bytes
 Template argument size: 860/2097152 bytes
 Highest expansion depth: 5/100
@@ -195,13 +197,13 @@ Unstrip post&#8208;expand size: 2744/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.993      1 -total
- 69.46%    6.246      1 Template:Manual:TOC
- 52.62%    4.732      1 Manual:Summary/cs
- 26.02%    2.340      2 Template:Docnav
+100.00%   12.346      1 -total
+ 74.36%    9.181      1 Template:Manual:TOC
+ 55.31%    6.829      1 Manual:Summary/cs
+ 21.76%    2.686      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092419 and revision id 1737339. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092454 and revision id 1737341. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
