--- a/wiki/cs/Manual;Traditional_2D_drafting.html
+++ b/wiki/cs/Manual;Traditional_2D_drafting.html
@@ -67,7 +67,7 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<p>FreeCAD's Draft Workbench acts as a bridge between 2D drafting and 3D modeling, making it unique compared to traditional 2D CAD systems like AutoCAD. While FreeCAD operates in a fully 3D environment, the Draft Workbench is designed to provide users with familiar 2D drawing tools while offering the flexibility of transitioning smoothly between 2D sketches and 3D objects. For instance, you can set custom working planes to draw on specific surfaces or orientations, allowing for the construction of parametric models. Since FreeCAD is parametric, any changes made to dimensions update automatically across the entire project.
+<p>Pracovn&iacute; prost&#345;ed&iacute; Draft Workbench v programu FreeCAD funguje jako most mezi 2D kreslen&iacute;m a 3D modelov&aacute;n&iacute;m, co&#382; jej &#269;in&iacute; jedine&#269;n&yacute;m ve srovn&aacute;n&iacute; s tradi&#269;n&iacute;mi 2D CAD syst&eacute;my, jako je AutoCAD. Zat&iacute;mco FreeCAD pracuje v pln&#283; 3D prost&#345;ed&iacute;, Draft Workbench je navr&#382;en tak, aby u&#382;ivatel&#367;m poskytoval zn&aacute;m&eacute; 2D kreslic&iacute; n&aacute;stroje a z&aacute;rove&#328; nab&iacute;zel flexibilitu plynul&eacute;ho p&#345;echodu mezi 2D n&aacute;&#269;rtky a 3D objekty. M&#367;&#382;ete nap&#345;&iacute;klad nastavit vlastn&iacute; pracovn&iacute; roviny pro kreslen&iacute; na konkr&eacute;tn&iacute;ch povr&scaron;&iacute;ch nebo v konkr&eacute;tn&iacute;ch orientac&iacute;ch, co&#382; umo&#382;&#328;uje konstrukci parametrick&yacute;ch model&#367;. Vzhledem k tomu, &#382;e FreeCAD je parametrick&yacute;, v&scaron;echny zm&#283;ny rozm&#283;r&#367; se automaticky aktualizuj&iacute; v cel&eacute;m projektu.
 </p><p>One of the strengths of the Draft Workbench is its comprehensive toolset, which includes both basic drawing and advanced modification tools. These tools can be used not only for 2D drafting but also for manipulating objects in 3D space. You can set working planes, define grids, and apply constraints to ensure geometric relationships remain intact across your design. Draft objects can be modified and repositioned using snapping modes and a variety of constraints, making precise drafting much easier.
 </p><p>Some of the tools found in the Draft Workbench:
 </p>
@@ -181,12 +181,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112092454
+Cached time: 20260112092544
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.146 seconds
-Real time usage: 0.248 seconds
+CPU time usage: 0.163 seconds
+Real time usage: 0.230 seconds
 Preprocessor visited node count: 158/1000000
 Post&#8208;expand include size: 8514/2097152 bytes
 Template argument size: 860/2097152 bytes
@@ -197,13 +197,13 @@ Unstrip post&#8208;expand size: 2744/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.346      1 -total
- 74.36%    9.181      1 Template:Manual:TOC
- 55.31%    6.829      1 Manual:Summary/cs
- 21.76%    2.686      2 Template:Docnav
+100.00%   10.176      1 -total
+ 66.86%    6.804      1 Template:Manual:TOC
+ 48.64%    4.949      1 Manual:Summary/cs
+ 27.64%    2.813      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092454 and revision id 1737341. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092544 and revision id 1737343. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
