--- a/wiki/cs/Manual;Traditional_2D_drafting.html
+++ b/wiki/cs/Manual;Traditional_2D_drafting.html
@@ -69,7 +69,7 @@
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>Pracovn&iacute; prost&#345;ed&iacute; Draft Workbench v programu FreeCAD funguje jako most mezi 2D kreslen&iacute;m a 3D modelov&aacute;n&iacute;m, co&#382; jej &#269;in&iacute; jedine&#269;n&yacute;m ve srovn&aacute;n&iacute; s tradi&#269;n&iacute;mi 2D CAD syst&eacute;my, jako je AutoCAD. Zat&iacute;mco FreeCAD pracuje v pln&#283; 3D prost&#345;ed&iacute;, Draft Workbench je navr&#382;en tak, aby u&#382;ivatel&#367;m poskytoval zn&aacute;m&eacute; 2D kreslic&iacute; n&aacute;stroje a z&aacute;rove&#328; nab&iacute;zel flexibilitu plynul&eacute;ho p&#345;echodu mezi 2D n&aacute;&#269;rtky a 3D objekty. M&#367;&#382;ete nap&#345;&iacute;klad nastavit vlastn&iacute; pracovn&iacute; roviny pro kreslen&iacute; na konkr&eacute;tn&iacute;ch povr&scaron;&iacute;ch nebo v konkr&eacute;tn&iacute;ch orientac&iacute;ch, co&#382; umo&#382;&#328;uje konstrukci parametrick&yacute;ch model&#367;. Vzhledem k tomu, &#382;e FreeCAD je parametrick&yacute;, v&scaron;echny zm&#283;ny rozm&#283;r&#367; se automaticky aktualizuj&iacute; v cel&eacute;m projektu.
 </p><p>Jednou z p&#345;ednost&iacute; programu Draft Workbench je jeho komplexn&iacute; sada n&aacute;stroj&#367;, kter&aacute; zahrnuje jak z&aacute;kladn&iacute; n&aacute;stroje pro kreslen&iacute;, tak pokro&#269;il&eacute; n&aacute;stroje pro &uacute;pravy. Tyto n&aacute;stroje lze pou&#382;&iacute;t nejen pro 2D kreslen&iacute;, ale tak&eacute; pro manipulaci s objekty v 3D prostoru. M&#367;&#382;ete nastavit pracovn&iacute; roviny, definovat m&#345;&iacute;&#382;ky a pou&#382;&iacute;t vazby, aby geometrick&eacute; vztahy v n&aacute;vrhu z&#367;staly zachov&aacute;ny. Objekty programu Draft lze upravovat a p&#345;em&iacute;s&#357;ovat pomoc&iacute; re&#382;im&#367; p&#345;ichyt&aacute;v&aacute;n&iacute; a r&#367;zn&yacute;ch vazeb, co&#382; v&yacute;razn&#283; usnad&#328;uje p&#345;esn&eacute; kreslen&iacute;.
-</p><p>Some of the tools found in the Draft Workbench:
+</p><p>N&#283;kter&eacute; z n&aacute;stroj&#367;, kter&eacute; najdete v Draft Workbench:
 </p>
 <ol><li>Drawing Tools:</li></ol>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Draft_Line.svg&amp;filetimestamp=20210319101803&amp;.html" class="mw-file-description"><img src="../File/Draft_Line.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Line.html" title="Draft Line">Line</a>,  <span typeof="mw:File"><a href="../index.php?title=Draft_Wire.svg&amp;filetimestamp=20210319103011&amp;.html" class="mw-file-description"><img src="../File/Draft_Wire.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Wire.html" title="Draft Wire">Wire</a> (polyline): These tools allow for creating straight line segments or continuous polylines, which can be constrained and converted into 3D shapes.</li>
@@ -181,12 +181,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112092605
+Cached time: 20260112092640
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.172 seconds
-Real time usage: 0.248 seconds
+CPU time usage: 0.174 seconds
+Real time usage: 0.298 seconds
 Preprocessor visited node count: 158/1000000
 Post&#8208;expand include size: 8514/2097152 bytes
 Template argument size: 860/2097152 bytes
@@ -197,13 +197,13 @@ Unstrip post&#8208;expand size: 2744/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.139      1 -total
- 74.65%    9.062      1 Template:Manual:TOC
- 61.40%    7.454      1 Manual:Summary/cs
- 21.41%    2.599      2 Template:Docnav
+100.00%   12.893      1 -total
+ 66.71%    8.601      1 Template:Manual:TOC
+ 46.45%    5.989      1 Manual:Summary/cs
+ 27.95%    3.603      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092605 and revision id 1737345. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410780-0!canonical and timestamp 20260112092639 and revision id 1737347. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
