--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -10,14 +10,12 @@
 <li><a href="../zh-cn/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#25163;&#20876;&#65306;&#20026;&#20135;&#21697;&#35774;&#35745;&#24314;&#27169; (13% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#35069;&#21697;&#35373;&#35336;&#12398;&#12383;&#12417;&#12398;&#12514;&#12487;&#12522;&#12531;&#12464; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;Modeling_for_product_design.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#51228;&#54408;&#46356;&#51088;&#51064;&#51012; &#50948;&#54620; &#47784;&#45944;&#47553; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Traditional 2D drafting</a></div>
-    <div><a href="../Manual;Preparing_models_for_3D_printing.html" title="Manual:Preparing models for 3D printing">Preparing models for 3D printing</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Tradi&#269;n&iacute; 2D kreslen&iacute;</a></div>
+    <div><a href="../Manual;Preparing_models_for_3D_printing.html" title="Manual:Preparing models for 3D printing">P&#345;&iacute;prava model&#367; pro 3D tisk</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
-</div>
 </div>
 <div id="toc" class="manualtoc" style="float:right; margin:10px 0px 10px 10px;">
 <ul><li><a href="../Manual;Introduction.html" title="Manual:Introduction">Introduction</a></li>
@@ -234,15 +232,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112092951
+Cached time: 20260112093050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.163 seconds
-Real time usage: 0.224 seconds
-Preprocessor visited node count: 101/1000000
-Post&#8208;expand include size: 8403/2097152 bytes
-Template argument size: 788/2097152 bytes
+CPU time usage: 0.122 seconds
+Real time usage: 0.168 seconds
+Preprocessor visited node count: 100/1000000
+Post&#8208;expand include size: 8397/2097152 bytes
+Template argument size: 784/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -250,13 +248,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.141      1 -total
- 71.52%   10.113      1 Template:Manual:TOC
- 50.93%    7.202      1 Manual:Summary/cs
- 25.01%    3.537      2 Template:Docnav
+100.00%    9.418      1 -total
+ 71.82%    6.764      1 Template:Manual:TOC
+ 51.99%    4.896      1 Manual:Summary/cs
+ 24.74%    2.330      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112092951 and revision id 1737351. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093050 and revision id 1737353. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
