--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -221,26 +221,24 @@
 </div>
 <p><br>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Traditional 2D drafting</a></div>
-    <div><a href="../Manual;Preparing_models_for_3D_printing.html" title="Manual:Preparing models for 3D printing">Preparing models for 3D printing</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Traditional_2D_drafting.html" title="Manual:Traditional 2D drafting">Tradi&#269;n&iacute; 2D kreslen&iacute;</a></div>
+    <div><a href="../Manual;Preparing_models_for_3D_printing.html" title="Manual:Preparing models for 3D printing">P&#345;&iacute;prava model&#367; pro 3D tisk</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260112093050
+Cached time: 20260112093109
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.122 seconds
-Real time usage: 0.168 seconds
-Preprocessor visited node count: 100/1000000
-Post&#8208;expand include size: 8397/2097152 bytes
-Template argument size: 784/2097152 bytes
+CPU time usage: 0.126 seconds
+Real time usage: 0.164 seconds
+Preprocessor visited node count: 99/1000000
+Post&#8208;expand include size: 8391/2097152 bytes
+Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -248,13 +246,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.418      1 -total
- 71.82%    6.764      1 Template:Manual:TOC
- 51.99%    4.896      1 Manual:Summary/cs
- 24.74%    2.330      2 Template:Docnav
+100.00%   11.979      1 -total
+ 70.31%    8.423      1 Template:Manual:TOC
+ 48.49%    5.809      1 Manual:Summary/cs
+ 25.65%    3.073      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093050 and revision id 1737353. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093109 and revision id 1737355. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
