--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -210,10 +210,8 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The model produced during this exercise: <a rel="nofollow" class="external free" href="https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.FCStd">https://github.com/yorikvanhavre/FreeCAD-manual/blob/master/files/lego.FCStd</a></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Read more</b>
+<p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Sketcher_Workbench.html" title="Sketcher Workbench">The Sketcher</a></li>
 <li><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">The Part Design Workbench</a></li>
@@ -230,13 +228,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112093109
+Cached time: 20260112093129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.126 seconds
-Real time usage: 0.164 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.125 seconds
+Real time usage: 0.176 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -246,13 +244,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.979      1 -total
- 70.31%    8.423      1 Template:Manual:TOC
- 48.49%    5.809      1 Manual:Summary/cs
- 25.65%    3.073      2 Template:Docnav
+100.00%   12.486      1 -total
+ 70.65%    8.822      1 Template:Manual:TOC
+ 48.60%    6.068      1 Manual:Summary/cs
+ 25.17%    3.142      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093109 and revision id 1737355. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112093129 and revision id 1737357. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
